--- a/LepackOne.Site/App_Plugins/LeReport/importReportData.html
+++ b/LepackOne.Site/App_Plugins/LeReport/importReportData.html
@@ -1,3 +1,9 @@
 ﻿
 <br />
 <h2>Lemon !</h2>
+
+<form name="le-report-form">
+    <label>Choose a file to upload ...</label>
+    <umb-single-file-upload></umb-single-file-upload>
+</form>
+
